registration and authorization done

--- a/flask_app/templates/cutit.html
+++ b/flask_app/templates/cutit.html
@@ -1,9 +1,10 @@
 {% extends "base.html" %}
 {% block title %}
-    Lincut
+    Lincut cutit page
 {% endblock %}
 {% block content %}
     <div class="container">
-        <h1>Hello world</h1>
+      <h1>CutIt Page</h1>
+      
     </div>
 {% endblock %}
