--- a/flask_app/templates/contact.html
+++ b/flask_app/templates/contact.html
@@ -1,8 +1,9 @@
 {% extends "base.html" %}
 {% block title %}
-    Lincut login page
+    Lincut contact page
 {% endblock %}
 {% block content %}
-    <h1>Login Page</h1>
-
+<div class="container">
+    <h1>Contact Page</h1>
+</div>
 {% endblock %}
