--- a/flask_app/templates/base.html
+++ b/flask_app/templates/base.html
@@ -12,7 +12,7 @@
     <body>
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
-          <a class="navbar-brand" href="">Lincut</a>
+          <a class="navbar-brand" href="{{ url_for('home') }}">Lincut</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
