--- a/flask_app/templates/login.html
+++ b/flask_app/templates/login.html
@@ -27,7 +27,7 @@
             <input type="password" class="form-control" id="password" name="password">
           </div>
           <button type="submit" class="btn btn-primary">Login</button>
-          <div class="form-text"><a href="{{ url_for('register') }}">Don't have account yet? Create one!</a>></div>
+          <div class="form-text">Don't have an account yet? <a href="{{ url_for('register') }}">Create one!</a></div>
         </form>
     </div>
 {% endblock %}
