--- a/flask_app/templates/base.html
+++ b/flask_app/templates/base.html
@@ -26,6 +26,9 @@
               </li>
               {% if session['authusr'] %}
                 <li class="nav-item">
+                  <a class="nav-link" href="{{ url_for('mylinks') }}">My links</a>
+                </li>
+                <li class="nav-item">
                   <a class="nav-link" href="{{ url_for('logout') }}">Logout</a>
                 </li>
               </ul>
