--- a/flask_app/templates/mylinks.html
+++ b/flask_app/templates/mylinks.html
@@ -16,8 +16,8 @@
             {% for link in links %}
               <tr>
                 <td>{{ link.link }}</td>
-                <td>{{ request.root_url }}{{ link.owner }}/{{ link.short_link }}</td>
-                <td>Delete</td>
+                <td><a href="{{ url_for('redirecting', owner=link.owner, short_link=link.short_link) }}">{{ request.root_url }}{{ link.owner }}/{{ link.short_link }}</a></td>
+                <td><a href="{{ url_for('delete_link', id=link.id) }}">Delete</a></td>
               </tr>
             {% endfor %}
             </tbody>
