--- a/flask_app/templates/base.html
+++ b/flask_app/templates/base.html
@@ -9,7 +9,7 @@
     <body>
         <title>{% block title %}{% endblock %}</title>
     </head>
-    <body>
+    <body class="bg-dark">
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
           <a class="navbar-brand" href="{{ url_for('home') }}">Lincut</a>
@@ -45,7 +45,28 @@
           </div>
         </div>
       </nav>
-
+        {% with messages = get_flashed_messages(with_categories=true, category_filter=["error", "success", "info"]) %}
+          {% if messages %}
+            {% for category, message in messages %}
+              {% if category == "error" %}
+              <div class="alert alert-danger d-flex" role="alert">
+                {{ message }}
+                <button type="button" class="btn-close me-2 m-auto" data-bs-dismiss="alert" aria-label="Close"></button>
+              </div>
+              {% elif category == "success" %}
+                <div class="alert alert-success d-flex" role="alert">
+                  {{ message }}
+                  <button type="button" class="btn-close me-2 m-auto" data-bs-dismiss="alert" aria-label="Close"></button>
+                </div>
+              {% else %}
+              <div class="alert alert-primary d-flex" role="alert">
+                {{ message }}
+                <button type="button" class="btn-close me-2 m-auto" data-bs-dismiss="alert" aria-label="Close"></button>
+              </div>
+              {% endif %}
+            {% endfor %}
+          {% endif %}
+        {% endwith %}
         {% block content %}{% endblock %}
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.7/dist/umd/popper.min.js" integrity="sha384-zYPOMqeu1DAVkHiLqWBUTcbYfZ8osu1Nd6Z89ify25QV9guujx43ITvfi12/QExE" crossorigin="anonymous"></script>
