--- a/flask_app/templates/contact.html
+++ b/flask_app/templates/contact.html
@@ -1,9 +1,9 @@
 {% extends "base.html" %}
 {% block title %}
-    Lincut contact page
+    Lincut - CONTACT
 {% endblock %}
 {% block content %}
-<div class="container">
+<div class="container bg-light rounded-2 p-3" style="min-height: 90vh;">
     <h1>Contact Page</h1>
 </div>
 {% endblock %}
