--- a/flask_app/templates/mylinks.html
+++ b/flask_app/templates/mylinks.html
@@ -1,9 +1,9 @@
 {% extends "base.html" %}
 {% block title %}
-    Lincut login page
+    Lincut - MY LINKS
 {% endblock %}
 {% block content %}
-    <div class="container">
+    <div class="container bg-light rounded-2 p-3" style="min-height: 90vh;">
         <table class="table">
             <thead>
               <tr>
