--- a/flask_app/templates/register.html
+++ b/flask_app/templates/register.html
@@ -1,20 +1,9 @@
 {% extends "base.html" %}
 {% block title %}
-    Lincut register page
+    Lincut - REGISTER
 {% endblock %}
 {% block content %}
-
-{% with messages = get_flashed_messages() %}
-  {% if messages %}
-    <ul class=flashes>
-    {% for message in messages %}
-      <li>{{ message }}</li>
-    {% endfor %}
-    </ul>
-  {% endif %}
-{% endwith %}
-
-<div class="container">
+  <div class="container bg-light rounded-2 p-3" style="min-height: 90vh;">
     <h1>Register Page</h1>
     <form action="#" method="POST">
         <div class="mb-3">
