index, contact, qrs in mylinks

--- a/flask_app/templates/cutit.html
+++ b/flask_app/templates/cutit.html
@@ -4,7 +4,7 @@
 {% endblock %}
 {% block content %}
     <div class="container bg-light rounded-2 p-3" style="min-height: 90vh;">
-      <h1>CutIt Page</h1>
+      <h1>Cut It</h1>
       <form action="#" method="POST" class="mt-5">
         <div class="mb-3">
           <label for="link" class="form-label">Link to Cut</label>
@@ -28,11 +28,6 @@
           </div>
         </div>
       </div>
-      
-      <!-- <div class="col-md-6 offset-md-3">
-        <p class="col-md-6 offset-md-3">{{ cutted.short_link }}</p>
-        <img src="data:image/jpeg;base64,{{ cutted.qrcode }}" alt="qrcode"/>
-      </div> -->
       {% endif %}
     </div>
 {% endblock %}
