--- a/flask_app/templates/register.html
+++ b/flask_app/templates/register.html
@@ -4,7 +4,7 @@
 {% endblock %}
 {% block content %}
   <div class="container bg-light rounded-2 p-3" style="min-height: 90vh;">
-    <h1>Register Page</h1>
+    <h1>Register</h1>
     <form action="#" method="POST">
         <div class="mb-3">
           <label for="email" class="form-label">Email address</label>
