--- a/flask_app/templates/index.html
+++ b/flask_app/templates/index.html
@@ -3,7 +3,7 @@
     Lincut
 {% endblock %}
 {% block content %}
-    <div class="container bg-light rounded-2 p-3" style="min-height: 90vh;">
-        <h1>Hello world</h1>
+    <div class="container-fluid d-flex justify-content-center" style="min-height: 70vh;">
+        <h1 class="position-absolute left-50" style="font-size: 20vh; top: 40%; font-family: 'Anton', sans-serif;"><a href="{{ url_for('cutit') }}" style="color: white; text-decoration:none;">CUT IT!</a></h1>
     </div>
 {% endblock %}
