--- a/flask_app/templates/login.html
+++ b/flask_app/templates/login.html
@@ -4,7 +4,7 @@
 {% endblock %}
 {% block content %}
     <div class="container bg-light rounded-2 p-3" style="min-height: 90vh;">
-      <h1>Login Page</h1>
+      <h1>Login</h1>
       <form action="#" method="POST" class="mt-5">
           <div class="mb-3">
             <label for="email" class="form-label">Email address</label>
