--- a/flask_app/templates/mylinks.html
+++ b/flask_app/templates/mylinks.html
@@ -37,9 +37,8 @@
               <div class="card" style="width: 25vw;">
                 <img src="data:image/jpeg;base64,{{ link.qrcode }}" class="card-img-top" alt="qrcode">
                 <div class="card-body">
-                  <h5 class="card-title">{{ link.full_short_link }}</h5>
-                  <p class="card-text">Redirect using link, QR or button below.</p>
-                  <a href="{{ link.full_short_link }}" class="btn btn-primary">Redirect</a>
+                  <h5 class="card-title"><a stye="color: white; text-decoration:none;" href="{{ url_for('redirecting', owner=link.owner, short_link=link.short_link) }}">{{ link.full_short_link }}</a></h5>
+                  <p class="card-text">Redirect using link or QR <code></code>.</p>
                 </div>
               </div>
             </div>
